# backend/src/common/entrypoints/litestar/router.py
@@ -6,9 +6,9 @@ from litestar import Router
 
 # VerdanTech Source
 from src import settings
+from src.cultivars.entrypoints.litestar.router import create_cultivar_router
 from src.garden.entrypoints.litestar.router import create_garden_router
 from src.user.entrypoints.litestar.router import create_user_router
-from src.cultivars.entrypoints.litestar.router import create_cultivar_router
 
 # List of all router factories
 router_factories = [create_user_router, create_garden_router, create_cultivar_router]
